--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,34 +1,19 @@
-#############################
-# 1) Builder Stage
-#############################
-FROM node:16-alpine AS build
+# Stage 1: Build the React app
+FROM node:20-alpine AS build
 WORKDIR /app
 
-# 複製 package.json、package-lock.json (若有)
+# Install dependencies and build
 COPY package*.json ./
 RUN npm install
-
-# 複製整個前端專案
 COPY . .
-
-# 編譯 React
 RUN npm run build
 
-#############################
-# 2) Production Stage (Nginx)
-#############################
-FROM nginx:stable-alpine
-
-# 清空預設 www
-RUN rm -rf /usr/share/nginx/html/*
-
-# 複製前階段產物
-COPY --from=build /app/build /usr/share/nginx/html
-
-# 複製自訂 Nginx 設定
-COPY suzoo.conf /etc/nginx/conf.d/default.conf
-
+# Stage 2: Serve the built app with Nginx
+FROM nginx:alpine
+# 移除預設配置並複製自定義 Nginx 配置
+RUN rm /etc/nginx/conf.d/default.conf
+COPY suzoo.conf /etc/nginx/conf.d/
+# 複製前端編譯結果至 Nginx 網站根目錄
+COPY --from=build /app/build/ /usr/share/nginx/html/
 EXPOSE 80
-EXPOSE 443
-
 CMD ["nginx", "-g", "daemon off;"]
