--- a/frontend/suzoo.conf
+++ b/frontend/suzoo.conf
@@ -1,37 +1,27 @@
-# HTTP -> HTTPS
+# 啟用 gzip 壓縮與設定壓縮類型
+gzip on;
+gzip_vary on;
+gzip_proxied any;
+gzip_comp_level 6;
+gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
+
 server {
-    listen 80;
-    listen [::]:80;
-    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
-    return 301 https://$host$request_uri;
-}
+    listen       80;
+    listen  [::]:80;
+    server_name  _;
 
-# HTTPS
-server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
-
-    ssl_certificate     /etc/nginx/certs/live/suzookaizokuhunter.com/fullchain.pem;
-    ssl_certificate_key /etc/nginx/certs/live/suzookaizokuhunter.com/privkey.pem;
-
-    ssl_session_timeout 5m;
-    ssl_session_cache   shared:SSL:50m;
-    ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-
+    # 安全與根目錄設定
+    server_tokens off;
     root   /usr/share/nginx/html;
     index  index.html index.htm;
 
-    # SPA fallback
+    # 前端路由轉發設定，未找到檔案時回退至 index.html
     location / {
         try_files $uri $uri/ /index.html =404;
     }
 
-    # 可選：長效快取
-    location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico)$ {
+    # 靜態資源快取設定（長效快取帶版本之檔案）
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
