--- a/frontend/suzoo.conf
+++ b/frontend/suzoo.conf
@@ -1,28 +1,39 @@
-# 啟用 gzip 壓縮與設定壓縮類型
-gzip on;
-gzip_vary on;
-gzip_proxied any;
-gzip_comp_level 6;
-gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
+server {
+    listen 80;
+    listen [::]:80;
+    server_name suzookaizokuhunter.com;
+    return 301 https://$host$request_uri;
+}
 
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  _;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name suzookaizokuhunter.com;
 
-    # 安全與根目錄設定
-    server_tokens off;
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
+    ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
-    # 前端路由轉發設定，未找到檔案時回退至 index.html
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    # SPA fallback and routing
     location / {
         try_files $uri $uri/ /index.html =404;
     }
 
-    # 靜態資源快取設定（長效快取帶版本之檔案）
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+    # Ensure index.html is not cached
+    location = /index.html {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+    }
+
+    # Static file caching for assets
+    location ~* \.(?:js|css|png|jpg|jpeg|gif|svg|ico|json)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
+        try_files $uri =404;
     }
 }
