--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,32 +1,30 @@
+# Nginx 設定檔：suzoo.conf
 server {
-    listen 80;
-    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
-    return 301 https://$host$request_uri;
-}
+    listen       80;
+    server_name  suzookaizokuhunter.com;  # 替換為您的網域，如有多網域可用 _ 作為通配
 
-server {
-    listen 443 ssl http2;
-    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+    # 靜態檔根目錄及預設檔案
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
 
-    ssl_certificate     /etc/nginx/certs/live/suzookaizokuhunter.com/fullchain.pem;
-    ssl_certificate_key /etc/nginx/certs/live/suzookaizokuhunter.com/privkey.pem;
-    # ... 略 ...
+    # 如果有 API 需要反向代理，設定 API 路徑的 location
+    location /api/ {
+        # proxy_pass http://backend-service:port;  # 將請求轉發到後端服務（如有）
+        try_files $uri $uri/ =404;  # 未對應檔案則回傳404，避免進入前端路由
+    }
 
-    root /usr/share/nginx/html;
-    index index.html index.htm;
-
-    # 前端 SPA
+    # 前端 SPA 靜態檔與路由處理
     location / {
+        # 先嘗試直接提供檔案或目錄，若不存在則回傳 index.html（SPA fallback）
         try_files $uri $uri/ /index.html =404;
     }
 
-    # Express
-    location /api/ {
-        proxy_pass http://suzoo_express:3000;
-    }
+    # 避免資源檔被當作文字處理，可加入常見類型的 MIME（大多數已由 include mime.types 處理）
 
-    # FastAPI
-    location /api/py/ {
-        proxy_pass http://suzoo_fastapi:8000;
+    # 建議：為提升效能，對版本化的靜態資源開啟快取
+    location ~* \.(js|css|png|jpg|gif|ico|svg)$ {
+        try_files $uri =404;
+        expires 1y;
+        add_header Cache-Control "public, max-age=31536000, immutable";
     }
 }
