--- a/frontend/suzoo.conf
+++ b/frontend/suzoo.conf
@@ -1,39 +1,52 @@
+# ★★★ Nginx SSL + SPA設定 ★★★
+
+# HTTP -> HTTPS
 server {
     listen 80;
     listen [::]:80;
-    server_name suzookaizokuhunter.com;
+    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
     return 301 https://$host$request_uri;
 }
 
+# HTTPS
 server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
-    server_name suzookaizokuhunter.com;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
+    # SSL 憑證（已掛載 /etc/letsencrypt:/etc/nginx/certs:ro）
+    ssl_certificate     /etc/nginx/certs/live/suzookaizokuhunter.com/fullchain.pem;
+    ssl_certificate_key /etc/nginx/certs/live/suzookaizokuhunter.com/privkey.pem;
 
-    root /usr/share/nginx/html;
-    index index.html index.htm;
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+    ssl_session_timeout 5m;
+    ssl_session_cache   shared:SSL:50m;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-    # SPA fallback and routing
+    # 前端靜態檔
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
+
+    # SPA fallback
     location / {
         try_files $uri $uri/ /index.html =404;
     }
 
-    # Ensure index.html is not cached
-    location = /index.html {
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
+    # Proxy 給 Express
+    location /api/ {
+        proxy_pass http://suzoo_express:3000;
     }
 
-    # Static file caching for assets
-    location ~* \.(?:js|css|png|jpg|jpeg|gif|svg|ico|json)$ {
+    # Proxy 給 FastAPI
+    location /api/py/ {
+        proxy_pass http://suzoo_fastapi:8000;
+    }
+
+    # 長效快取（可選）
+    location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
-        try_files $uri =404;
     }
 }
