--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,7 +77,7 @@ services:
       - "3000"
     restart: unless-stopped
 
-  # ★★★ 新的 Frontend (React+Nginx) ★★★
+  # Frontend (React+Nginx)
   suzoo_frontend:
     build:
       context: ./frontend
