--- a/frontend/suzoo.conf
+++ b/frontend/suzoo.conf
@@ -1,5 +1,3 @@
-# ★★★ Nginx SSL + SPA設定 ★★★
-
 # HTTP -> HTTPS
 server {
     listen 80;
@@ -14,7 +12,6 @@ server {
     listen [::]:443 ssl http2;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # SSL 憑證（已掛載 /etc/letsencrypt:/etc/nginx/certs:ro）
     ssl_certificate     /etc/nginx/certs/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/nginx/certs/live/suzookaizokuhunter.com/privkey.pem;
 
@@ -25,7 +22,6 @@ server {
     ssl_prefer_server_ciphers on;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-    # 前端靜態檔
     root   /usr/share/nginx/html;
     index  index.html index.htm;
 
@@ -34,17 +30,17 @@ server {
         try_files $uri $uri/ /index.html =404;
     }
 
-    # Proxy 給 Express
+    # 轉發 Express
     location /api/ {
         proxy_pass http://suzoo_express:3000;
     }
 
-    # Proxy 給 FastAPI
+    # 轉發 FastAPI
     location /api/py/ {
         proxy_pass http://suzoo_fastapi:8000;
     }
 
-    # 長效快取（可選）
+    # 可選：長效快取
     location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
