--- a/frontend/suzoo.conf
+++ b/frontend/suzoo.conf
@@ -1,4 +1,4 @@
-# HTTP -> HTTPS
+# ★★★ HTTP -> HTTPS ★★★
 server {
     listen 80;
     listen [::]:80;
@@ -6,15 +6,19 @@ server {
     return 301 https://$host$request_uri;
 }
 
-# HTTPS
+# ★★★ HTTPS ★★★
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;  # ← 新式用法，避免 listen 443 ssl http2 過時警告
+
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
+    # SSL 憑證 (若預設 Let's Encrypt 存放在 /etc/nginx/certs/live/...)
     ssl_certificate     /etc/nginx/certs/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/nginx/certs/live/suzookaizokuhunter.com/privkey.pem;
 
+    # 一般 SSL 優化
     ssl_session_timeout 5m;
     ssl_session_cache   shared:SSL:50m;
     ssl_protocols       TLSv1.2 TLSv1.3;
@@ -22,25 +26,26 @@ server {
     ssl_prefer_server_ciphers on;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
+    # 前端檔案根目錄
     root   /usr/share/nginx/html;
     index  index.html index.htm;
 
-    # SPA fallback
+    # ★ SPA fallback
     location / {
         try_files $uri $uri/ /index.html =404;
     }
 
-    # 轉發 Express
+    # ★ 轉發給 Express 後端 (注意：express expose: 3000)
     location /api/ {
         proxy_pass http://suzoo_express:3000;
     }
 
-    # 轉發 FastAPI
+    # ★ 轉發給 FastAPI 後端 (注意：fastapi expose: 8000)
     location /api/py/ {
         proxy_pass http://suzoo_fastapi:8000;
     }
 
-    # 可選：長效快取
+    # ★ 可選：長效快取
     location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
