--- a/express/package.json
+++ b/express/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.0",
     "joi": "^17.9.2",
     "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.13.0",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.31.1",
