--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -22,8 +22,8 @@ FROM nginx:alpine
 # 移除預設配置
 RUN rm /etc/nginx/conf.d/default.conf || true
 
-# 複製自訂 Nginx 設定 (與 Dockerfile 同層)
-COPY suzoo.conf /etc/nginx/conf.d/default.conf
+# 若您有自訂 suzoo.conf，就複製它
+# COPY suzoo.conf /etc/nginx/conf.d/default.conf
 
 # 複製 React 編譯後結果
 COPY --from=build /app/build /usr/share/nginx/html
