--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3.9'
 services:
   # PostgreSQL
   suzoo_postgres:
@@ -93,9 +94,11 @@ services:
     ports:
       - "80:80"
       - "443:443"
-    # 將 /etc/letsencrypt 掛載到 /etc/nginx/certs (或您自訂的 certs 路徑)
+    # 將 /etc/letsencrypt 掛載到容器內 /etc/nginx/certs，讀取 SSL 憑證
+    # 再將 suzoo.conf 掛載至 /etc/nginx/conf.d/default.conf
     volumes:
       - /etc/letsencrypt:/etc/nginx/certs:ro
+      - ./frontend/suzoo.conf:/etc/nginx/conf.d/default.conf:ro
     restart: unless-stopped
 
 networks:
