--- a/frontend/suzoo.conf
+++ b/frontend/suzoo.conf
@@ -10,11 +10,11 @@ server {
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
-    http2 on;  # ← 新式用法，避免 listen 443 ssl http2 過時警告
+    http2 on;  # 使用 HTTP/2
 
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # SSL 憑證 (若預設 Let's Encrypt 存放在 /etc/nginx/certs/live/...)
+    # SSL 憑證路徑 (需放在主機 /etc/letsencrypt/live/suzookaizokuhunter.com/)
     ssl_certificate     /etc/nginx/certs/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/nginx/certs/live/suzookaizokuhunter.com/privkey.pem;
 
@@ -35,17 +35,17 @@ server {
         try_files $uri $uri/ /index.html =404;
     }
 
-    # ★ 轉發給 Express 後端 (注意：express expose: 3000)
+    # ★ 轉發給 Express (注意 Express 在 Docker 內的服務名稱 suzoo_express:3000)
     location /api/ {
         proxy_pass http://suzoo_express:3000;
     }
 
-    # ★ 轉發給 FastAPI 後端 (注意：fastapi expose: 8000)
+    # ★ 轉發給 FastAPI (suzoo_fastapi:8000)
     location /api/py/ {
         proxy_pass http://suzoo_fastapi:8000;
     }
 
-    # ★ 可選：長效快取
+    # ★ 可選：對靜態檔案做長效快取
     location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
